# crew-ai-test

./: .env.example  .gitignore  README.md  pyproject.toml
src/ideate_assistant/: agents.py  crew.py  main.py  tasks.py
static/: index.html
