[tool.poetry]
name = "ideate_assistant"
version = "0.1.0"
description = "Get help with the Ideate activity using crewAI"
authors = ["Gavin Torrecampo gav.torrecampo@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.35.8"}
crewai-tools = "^0.4.6"
python-dotenv = "^1.0.1"
openai = "^1.35.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[tool.poetry.scripts]
ideate_assistant = "ideate_assistant.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"